# python_project_structure

./: README.md
src/common_project/: pyproject.toml
src/common_project/src/: common_project_func.py
src/common_project/src/common_project/: __init__.py
src/containers/common_containers/: main.py  pyproject.toml
src/containers/container_type_one/: main.py  pyproject.toml
src/containers/container_type_two/: main.py  pyproject.toml
src/machine_one/: pyproject.toml
src/machine_one/src/service_one/: main.py
