[project]
name = "common-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv]
package = true

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

#[tool.setuptools]
#packages = ["common_project"]
#package-dir = {"" = "src"}

#[project.scripts
#common-project = "common_project:main"
#common-project = "common_project:*"

#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

#[tool.hatch.build.targets.wheel]
#packages = ["src"]



#[tool.uv.build-backend]
#module-root = "src"
#source-include = ["src/**"]

